2 stoplca za submission, prof in author star aligned na dno div, sprememba margina, css grid

--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 	width: 300px;
 	padding: 10px;
 	box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
-	margin-top: 2em;
+	margin-top: 0.5em;
+	padding-bottom: 0px;
 }
 .text {
 	flex: 1;
@@ -57,4 +58,15 @@ main {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+}
+#grid {
+	display: grid;
+	grid-column-gap: 5px;
+	grid-row-gap: 2px;
+	grid-template-columns: auto auto;
+	grid-template-rows: auto;
+	align-items: flex-start;
+}
+.professor, .author {
+	vertical-align: baseline;
 }
